--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -33,9 +33,9 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+          <a class="brand" href="{{ HOME_PATH }}/index.html">{{ site.title }}</a>
           <ul class="nav">
-              <li><a href="{{ HOME_PATH }}">Profile</a></li>
+              <li><a href="{{ HOME_PATH }}/index.html">Profile</a></li>
               <li><a href="{{ BASE_PATH }}/pages/publications.html">Publications</a></li>
               <li><a href="{{ BASE_PATH }}/pages/projects.html">Projects</a></li>
               <li><a href="{{ BASE_PATH }}/pages/awards.html">Service and Awards</a></li>
